; ModuleID = '/home/carl/AnghaBench/qmk_firmware/drivers/oled/extr_oled_driver.c_oled_max_chars.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/drivers/oled/extr_oled_driver.c_oled_max_chars.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@oled_rotation = common dso_local global i32 0, align 4
@OLED_ROTATION_90 = common dso_local global i32 0, align 4
@OLED_DISPLAY_WIDTH = common dso_local global i32 0, align 4
@OLED_FONT_WIDTH = common dso_local global i32 0, align 4
@OLED_DISPLAY_HEIGHT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @oled_max_chars() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @oled_rotation, align 4
  %3 = load i32, i32* @OLED_ROTATION_90, align 4
  %4 = call i32 @HAS_FLAGS(i32 %2, i32 %3)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %10, label %6

6:                                                ; preds = %0
  %7 = load i32, i32* @OLED_DISPLAY_WIDTH, align 4
  %8 = load i32, i32* @OLED_FONT_WIDTH, align 4
  %9 = sdiv i32 %7, %8
  store i32 %9, i32* %1, align 4
  br label %14

10:                                               ; preds = %0
  %11 = load i32, i32* @OLED_DISPLAY_HEIGHT, align 4
  %12 = load i32, i32* @OLED_FONT_WIDTH, align 4
  %13 = sdiv i32 %11, %12
  store i32 %13, i32* %1, align 4
  br label %14

14:                                               ; preds = %10, %6
  %15 = load i32, i32* %1, align 4
  ret i32 %15
}

declare dso_local i32 @HAS_FLAGS(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
